src/test/deca/context/invalid/test_error_3.71-7.deca
// Description:
//    Soulève l'erreur (3.71)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Identificateur de méthode attendu (règle 3.71)
//
// Historique:
//      cree le 06/01/2022

class A{
    int x;
    void m() {
    }
}

{
	A a;
    int b;
    b = a.m().x();
}
